Tim and Roni's comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@349 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2464,3 +2464,37 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
       SLACcitation   = "%%CITATION = ARXIV:1403.6610;%%",
 }
 
+@article{Bauer:2013ihz,
+	author         = "Bauer, Daniel and Buckley, James and Cahill-Rowley,
+	Matthew and Cotta, Randel and Drlica-Wagner, Alex and
+	others",
+	title          = "{Dark Matter in the Coming Decade: Complementary Paths to
+	Discovery and Beyond}",
+	journal        = "Phys.Dark Univ.",
+	volume         = "7-8",
+	pages          = "16-23",
+	doi            = "10.1016/j.dark.2015.04.001",
+	year           = "2013",
+	eprint         = "1305.1605",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "FERMILAB-CONF-13-166-A-AE",
+	SLACcitation   = "%%CITATION = ARXIV:1305.1605;%%",
+}
+
+
+@article{Hill:2014yka,
+	author         = "Hill, Richard J. and Solon, Mikhail P.",
+	title          = "{Standard Model anatomy of WIMP dark matter direct
+	detection I: weak-scale matching}",
+	journal        = "Phys.Rev.",
+	volume         = "D91",
+	pages          = "043504",
+	doi            = "10.1103/PhysRevD.91.043504",
+	year           = "2015",
+	eprint         = "1401.3339",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "EFI-13-34",
+	SLACcitation   = "%%CITATION = ARXIV:1401.3339;%%",
+}
