--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -27,10 +27,13 @@ observed at colliders as particles or jets recoiling against an invisible state,
 called ``mono-X'' or \MET{}+X reactions~\cite{Feng:2005gj,Beltran:2010ww,Bai:2010hh}, 
 where \MET is the missing transverse momentum observable in the detector.
 
-Early LHC Run-1 searches for \MET{}+X signatures at
+
+
+Early Tevatron and LHC Run-1 searches for \MET{}+X signatures at CDF
+CDF~\cite{Aaltonen:2012jb}, 
 ATLAS~\cite{Aad:2015zva,Aad:2014tda,ATLAS:2014wra,Aad:2014vka,Aad:2013oja,Aad:2014wza,Aad:2014vea,ATL-PHYS-PUB-2014-007}
 and
-CMS~\cite{Khachatryan:2014rra,Khachatryan:2014rwa,Khachatryan:2014tva,Khachatryan:2014uma,Khachatryan:2015nua,CMS-PAS-B2G-13-004,CMS-PAS-EXO-14-004}
+CMS~\cite{Khachatryan:2014rra,Khachatryan:2014rwa,Khachatryan:2014tva,Khachatryan:2014uma,Khachatryan:2015nua,CMS-PAS-B2G-13-004,CMS-PAS-EXO-14-004},
 employed a basis of contact interaction operators in effective field
 theories (EFTs) \cite{Goodman:2010yf,Goodman:2010ku} to calculate the
 possible signals. %\Todo{Check these references here}
@@ -43,22 +46,16 @@ interaction. Only the overall production rate is a free parameter to
 be constrained or measured.  Provided that the contact interaction
 approximation holds, these EFTs provide a straightforward way to
 compare the results from different collider searches with non-collider
-searches for dark matter.  From the time of their proposal, however,
-it was clear that, though limits on the contact interaction operators
-provide useful information, they are not always a good description of
-dark matter production at the LHC in the regime of
-interest~\cite{Goodman:2010yf,Shoemaker:2011vi}.
+searches for dark matter.  
 
-The contact interaction interpretation of Tevatron~\cite{Aaltonen:2012jb} and Run-1 LHC searches
-provided results outside the range of applicability of the EFT
-description, requiring further study~\cite{Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Shoemaker:2011vi,Busoni:2013lha}.
+The EFT describes the case when the mediator of the interaction between SM and DM particles are very heavy; 
+if this is not the case, models that explicitly include these mediators are needed~\cite{Goodman:2010yf,Shoemaker:2011vi,Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Shoemaker:2011vi,Busoni:2013lha}.
 Some ``simplified models'' \cite{Alwall:2008ag,Goodman:2011jq,Alves:2011wf}
 of dark matter production were constructed, including particles and interactions beyond the SM.
 These models can be used consistently at LHC energies, and provide
 an extension to the EFT approach. 
 Many proposals for such models have emerged (see, for example
 Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:2013xka,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba,Haisch:2015ioa,Bai:2012xg,Carpenter:2012rg,Bell:2012rg,Petrov:2013nia,Carpenter:2013xra}). 
-These models introduce a new particle: a mediator of the interactions between SM and DM particles.
 %% that a contact
 %% interaction is often not the correct description for the signals to
 %% which the LHC is sensitive.
@@ -69,7 +66,10 @@ These models introduce a new particle: a mediator of the interactions between SM
 %Such particles can mediate reactions that produce dark matter
 %particles.
 At the LHC, the kinematics of mono-X reactions occurring via a \tev-scale mediator can differ substantially from the prediction of the contact
-interaction. The mediator may also produce qualitatively different signals, such as decays back into Standard Model particles. Thus, appropriate simplified models are thus an important component of the design, optimization, and interpretation of dark matter searches at ATLAS and CMS.
+interaction. The mediator may also produce qualitatively different signals, such as decays back into Standard Model particles. 
+Thus, appropriate simplified models are thus an important component of the design, optimization, and interpretation of dark matter searches at ATLAS and CMS.
+This has already been recognized in the CDF, ATLAS and CMS searches quoted above, where both EFT and selected simplified model
+results are presented. 
 
 \section{The ATLAS/CMS Dark Matter Forum}
 
@@ -114,14 +114,13 @@ important to restrict the scope and timescale to the following:
   scales for each of the simplified models. This will also lead to a
   common set of theory uncertainties, which will facilitate the
   comparison of results between the two collaborations.
-\item The forum could also discuss how to apply the
+\item The forum should discuss how to apply the
   EFT formalism and present the results of EFT
   interpretations.
 \item The forum should prepare a report summarizing these items,
   suitable both as a reference for the internal ATLAS and CMS
   audiences and as an explanation of Run-2 benchmarks for theory and non-collider
-  readers. This report represents the views of the participants of the
-  forum.
+  readers. This report represents the views of its endorsers, as participants of the forum.
 \end{enumerate}
 
 \section{Grounding Assumptions}
@@ -148,8 +147,8 @@ scenario, and with the imminent re-start of the LHC our report relies
 heavily on a large body of existing theoretical work which assumed Dirac fermionic dark matter. 
 
 Different spins of dark matter particles will typically
-give similar results. Some exceptions exist. For example, the choice of Dirac fermions forbids some
-processes that are allowed for Majorana fermions~\cite{Goodman:2010yf}.
+give similar results. Some exceptions exist. For example, the choice of Majorana fermions forbids some
+processes that are allowed for Dirac fermions~\cite{Goodman:2010yf}.
 Aside from these, adjusting the choice of Dirac or Majorana fermions or scalars will produce only minor changes
 in the kinematic distributions of the visible particle and is expected to have little effect
 on cut-and-count\sidenote{Cut-and-count refers to an analysis
@@ -170,7 +169,7 @@ annually-modulated signal in a direct-detection experiment would leave
 unanswered many questions about the nature of the interaction that
 could be resolved by the simultaneous discovery of a new mediator
 particle.  Collider, direct, and indirect detection searches provide
-complementary ways to approach this problem, and it is in this spirit
+complementary ways to approach this problem~\cite{Bauer:2013ihz}, and it is in this spirit
 that much of our focus is on the mediator.
 
 We systematically explore the basic possibilities for
