--- a/doc/tex/SummaryTable.tex
+++ b/doc/tex/SummaryTable.tex
@@ -59,5 +59,5 @@
 \end{footnotesize}
 
 \begin{center}
-	Table 6.1: Summary table for recommended benchmark models and their implementation.
+	Table 6.1: Summary table for available benchmark models considered within the works of this Forum. Experimental collaborations will use the implementation in bold for Run-2 searches. 
 \end{center}
