--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -701,12 +701,8 @@ No differences in the kinematic distributions are observed and also the cross se
 \end{figure*}
 
 
-The optimized parameter grid in the $\mMed$--$\mDM$ plane for scalar and pseudo-scalar mediators is motivated by similar arguments as in the previous section. Therefore, a similar pattern is followed here, taking again $\gq=0.25$ and $\gDM=1$. Only the sensitivity to the highest mediator masses has to be re-evaluated.
-The generator level cross section times the acceptance at $\MET>500$~\gev for the model with couplings $\gq=\gDM=1$, light Dark Matter of \mDM=10~\gev and
-a \mMed=500~\gev scalar mediator is at the order of 10\,fb, i.e. just at the edge of the early Run-2 sensitivity. Increasing the mediator mass to 1~\tev pushes the product $\sigma\times A$ down to approximately 0.1\,fb, below the LHC sensitivity. Therefore, we choose to remove the 2~\tev mediator mass from the grid and present the final grid with 33
-%26 
-mass points only, as shown in Tab.\,\ref{tab:mDMmMedScan_SP}.
-One point at very high mediator mass (10~\tev) is added for each of the DM masses scanned, to aid the reinterpretation of results in terms of contact interaction operators (EFTs). 
+The optimized parameter grid in the $\mMed$--$\mDM$ plane for scalar and pseudo-scalar mediators is motivated by similar arguments as in the previous section. Therefore, a similar pattern is followed here, with the exception of taking $\gq=\gDM=1$. The choice of $\gq=0.25$ for the vector and axial-vector models is motivated by suppressing constraints from di-jets, which is not a concern in the scalar and pseudo-scalar mediator case. Here a di-jet signal emerges only at the 2-loop level through diagrams where the mediator is produced via gluon-gluon fusion and decays back into two gluons through a top loop. The strong loop suppression renders such signals unobservable at the LHC. Further constraints on the scalar and pseudo-scalar mediators may emerge from searches in $t\bar{t}$ final states. Studies of the electroweak effects to $t\bar{t}$ production suggest that one can only expect percent level contributions for $\gq \sim O(1)$ \cite{Haisch:2013fla}. Therefore, keeping $\gq=\gDM=1$ is a reasonable choice in the case of the scalar and pseudo-scalar mediators. Contrary to the vector and axial-vector models, note that couplings of 1 lead to $\Gamma_{\rm{min}}/\mMed \lsim 0.04$, ensuring the narrow width approximation is applicable. Furthermore, the sensitivity to the highest mediator masses has to be re-evaluated. The generator level cross section times the acceptance at $\MET>500$~\gev for the model with couplings $\gq=\gDM=1$, light Dark Matter of \mDM=10~\gev and a \mMed=500~\gev scalar mediator is at the order of 10\,fb, i.e. just at the edge of the early Run-2 sensitivity. Increasing the mediator mass to 1~\tev pushes the product $\sigma\times A$ down to approximately 0.1\,fb, below the LHC sensitivity. Therefore, we choose to remove the 2~\tev mediator mass from the grid and present the final grid with 33 mass points only, as shown in Tab.\,\ref{tab:mDMmMedScan_SP}. One point at very high mediator mass (10~\tev) is added for each of the DM masses scanned, to aid the reinterpretation of results in terms of contact interaction operators (EFTs).
+
 
 \begin{table}[!h]
 \centering
