--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -1,35 +1,31 @@
-\noindent\href{mailto:daniel.abercrombie@cern.ch}{Daniel Robert Abercrombie} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:nural.akchurin@cern.ch}{Nural Akchurin} 
 \emph{Texas Tech University, USA}\\
-\noindent\href{mailto:ece.akilli@cern.ch}{Ece Akilli} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:juan.alcaraz@cern.ch}{Juan Alcaraz} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Jeremy.Andrea@cern.ch}{Jeremy Andrea} 
-\emph{Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
+\emph{Institut Pluridisciplinaire Hubert Curien/D\'epartement Recherches Subatomiques, Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
 \noindent\href{mailto:Patrizia.Azzi@cern.ch}{Patrizia Azzi} 
 \emph{INFN Padova, Italy}\\
 \noindent\href{mailto:mbackovic@gmail.com}{Mihailo Backovic} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:yangbai@physics.wisc.edu}{Yang Bai} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:swagato.banerjee@gmail.com}{Swagato Banerjee} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Department of Physics, University of Wisconsin-Madison, USA}\\
+\noindent\href{mailto:swagato.banerjee@cern.ch}{Swagato Banerjee} 
+\emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:Alexander.Belyaev@cern.ch}{Alexander Belyaev} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:antonio.boveia@cern.ch}{Antonio Boveia} 
 \emph{CERN, Switzerland}\\
 \noindent\href{mailto:amelia.jean.brennan@cern.ch}{Amelia Jean Brennan} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{The University of Melbourne, Australia}\\
 \noindent\href{mailto:Oliver.Buchmueller@Cern.ch}{Oliver Buchmueller} 
 \emph{Imperial College London, United Kingdom}\\
-\noindent\href{mailto:mbuckley@physics.rutgers.edu}{Matthew Buckley} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:mbuckley@physics.rutgers.edu}{Matthew R. Buckley} 
+\emph{Department of Physics and Astronomy, Rutgers University, USA}\\
 \noindent\href{mailto:giorgio.busoni@sissa.it}{Giorgio Busoni} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Michael.Buttignol@cern.ch}{Michael Buttignol} 
-\emph{ Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
+\emph{Institut Pluridisciplinaire Hubert Curien/D\'epartement Recherches Subatomiques, Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
 \noindent\href{mailto:cacciapa@ipnl.in2p3.fr}{Giacomo Cacciapaglia} 
 \emph{Universit\'e de Lyon and Universit\'e Lyon 1, CNRS/IN2P3, UMR5822, IPNL, France}\\
 \noindent\href{mailto:Regina.Caputo@cern.ch}{Regina Caputo} 
@@ -38,12 +34,12 @@
 \emph{Ohio State University, USA}\\
 \noindent\href{mailto:Mingshui.Chen@cern.ch}{Mingshui Chen} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:john.paul.chou@cern.ch}{John Paul Chou} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:annapaola.de.cosa@cern.ch}{Annapaola De Cosa} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{University of Zurich, Switzerland}\\
 \noindent\href{mailto:christopher.cowden@cern.ch}{Chris Cowden} 
 \emph{Texas Tech University, USA}\\
+\noindent\href{mailto:fraderamo@berkeley.edu}{Francesco D'Eramo} 
+\emph{University of California and LBNL, Berkeley, USA}\\
 \noindent\href{mailto:deandrea@ipnl.in2p3.fr}{Aldo Deandrea} 
 \emph{Universit\'e de Lyon and Universit\'e Lyon 1, CNRS/IN2P3, UMR5822, IPNL, France}\\
 \noindent\href{mailto:adifranz@uci.edu}{Anthony DiFranzo} 
@@ -57,15 +53,15 @@
 \noindent\href{mailto:pjfox@fnal.gov}{Patrick Fox} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Benjamin.Fuks@cern.ch}{Benjamin Fuks} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Institut Pluridisciplinaire Hubert Curien/D\'epartement Recherches Subatomiques, Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
 \noindent\href{mailto:genest@lpsc.in2p3.fr}{Marie-Helene Genest} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{LPSC, Université Grenoble-Alpes, CNRS/IN2P3, France}\\
 \noindent\href{mailto:Bhawna.Gomber@cern.ch}{Bhawna Gomber} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:arely.cortes.gonzalez@cern.ch}{Arely Cortes Gonzales} 
 \emph{IFAE Barcelona, Spain}\\
 \noindent\href{mailto:barbara.alvarez.gonzalez@cern.ch}{Barbara Alvarez Gonzalez} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{CERN, Switzerland}\\
 \noindent\href{mailto:johanna.gramling@cern.ch}{Johanna Gramling} 
 \emph{Universit\'e de Gen\`eve, Ecole de Physique, Switzerland}\\
 \noindent\href{mailto:michele.degruttola@cern.ch}{Michele De Gruttola} 
@@ -76,8 +72,6 @@
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:ulrich.haisch@physics.ox.ac.uk}{Ulrich Haisch} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:roni.harnik@gmail.com}{Roni Harnik} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:philip.coleman.harris@cern.ch}{Philip Coleman Harris} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Kerstin.Hoepfner@cern.ch}{Kerstin Hoepfner} 
@@ -87,27 +81,27 @@
 \noindent\href{mailto:schsu@uw.edu}{Shih-Chieh Hsu} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:valerio.ippolito@cern.ch}{Valerio Ippolito} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Laboratory for Particle Physics and Cosmology, Harvard University, USA}\\
 \noindent\href{mailto:thomas.jacques@unige.ch}{Thomas Jacques} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
 \noindent\href{mailto:Xiangyang.Ju@cern.ch}{Xiangyang Ju} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:felix.kahlhoefer@desy.de}{Felix Kahlhoefer} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Alexis.Kalogeropoulos@cern.ch}{Alexis Kalogeropoulos} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:laser.seymour.kaplan@cern.ch}{Laser Seymour Kaplan} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:Lashkar.Kashif@cern.ch}{Lashkar Kashif} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:valya.khoze@durham.ac.uk}{Valentin Khoze} 
+\emph{University of Wisconsin-Madison, USA}\\
+\noindent\href{mailto:valya.khoze@durham.ac.uk}{Valentin V. Khoze} 
 \emph{Institute of Particle Physics Phenomenology, Durham University, United Kingdom}\\
 \noindent\href{mailto:Raman.Khurana@cern.ch}{Raman Khurana} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{National Central University, Taiwan}\\
 \noindent\href{mailto:khristian.kotov@cern.ch}{Khristian Kotov} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:dmytro.kovalskyi@cern.ch}{Dmytro Kovalskyi} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{MIT, USA}\\
 \noindent\href{mailto:suchita.kulkarni@oeaw.ac.at}{Suchita Kulkarni} 
 \emph{Institut f\"ur Hochenergiephysik, \"Osterreichische Akademie der Wissenschaften, Austria}\\
 \noindent\href{mailto:shuichi.kunori@ttu.edu}{Shuichi Kunori} 
@@ -123,7 +117,7 @@
 \noindent\href{mailto:steven.lowette@cern.ch}{Steven Lowette} 
 \emph{Vrije Universiteit Brussel - IIHE, Belgium}\\
 \noindent\href{mailto:romain.madar@cern.ch}{Romain Madar} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Laboratoire de Physique Corpusculaire, Clermont-Ferrand, France}\\
 \noindent\href{mailto:sarah.malik@cern.ch}{Sarah Malik} 
 \emph{Imperial College London, United Kingdom}\\
 \noindent\href{mailto:Fabio.Maltoni@cern.ch}{Fabio Maltoni} 
@@ -133,21 +127,21 @@
 \noindent\href{mailto:kentarou.mawatari@vub.ac.be}{Kentarou Mawatari} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:c.mccabe@uva.nl}{Christopher McCabe} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:megy@clermont.in2p3.fr}{Th\'eo Jean Megy} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{GRAPPA, University of Amsterdam, Netherlands}\\
+\noindent\href{mailto:megy.theo@gmail.com}{Th\'eo Megy} 
+\emph{Laboratoire de Physique Corpusculaire, Clermont-Ferrand, France}\\
 \noindent\href{mailto:enrico.morgante@unige.ch}{Enrico Morgante} 
-\emph{D\'epartement de Physique Th\'eorique and Centre for Astroparticle Physics (CAP), Universit\'e de Gen\`eve, Switzerland}\\
+\emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
 \noindent\href{mailto:mrenna@fnal.gov}{Steve Mrenna} 
 \emph{FNAL, USA}\\
 \noindent\href{mailto:siddharth.m.narayanan@cern.ch}{Siddharth M Narayanan} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:andrew.james.nelson@cern.ch}{Andy Nelson} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{University of California, Irvine, USA}\\
 \noindent\href{mailto:Sergio.Novaes@cern.ch}{S\'ergio F. Novaes} 
-\emph{Universidade Estadual Paulista, NO COUNTRY}\\
+\emph{Universidade Estadual Paulista, Brazil}\\
 \noindent\href{mailto:klaas.ole.padeken@cern.ch}{Klaas Ole Padeken} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{RWTH Aachen University, III. Physikalisches Institut A, Aachen, Germany}\\
 \noindent\href{mailto:Priscilla.Pani@cern.ch}{Priscilla Pani} 
 \emph{Stockholm University, Sweden}\\
 \noindent\href{mailto:mpapucci@lbl.gov}{Michele Papucci} 
@@ -157,45 +151,41 @@
 \noindent\href{mailto:Jacopo.Pazzini@pd.infn.it}{Jacopo Pazzini} 
 \emph{Universit\`a di Padova, Italy}\\
 \noindent\href{mailto:Bjoern.Penning@cern.ch}{Bj\"orn Penning} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Imperial College London, United Kingdom}\\
 \noindent\href{mailto:mmp@ifae.es}{Mario Martinez Perez} 
 \emph{IFAE Barcelona, Spain}\\
-\noindent\href{mailto:mpeskin@slac.stanford.edu}{Michael Peskin} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Arturo.Rodolfo.Sanchez.Pineda@cern.ch}{Arturos Sanchez Pineda} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Deborah.Pinna@cern.ch}{Deborah Pinna} 
 \emph{University of Zurich, Switzerland}\\
 \noindent\href{mailto:tdupree.cms@gmail.com}{Tristan du Pree} 
 \emph{CERN, Switzerland}\\
+\noindent\href{mailto:massimiliano.procura@univie.ac.at}{Massimiliano Procura} 
+\emph{Universit\"at Wien, Austria}\\
 \noindent\href{mailto:shamona.fawad.qazi@cern.ch}{Shamona F. Qazi} 
 \emph{National Centre for Physics, Quaid-i-Azam University, Pakistan}\\
 \noindent\href{mailto:davide.racco@unige.ch}{Davide Racco} 
-\emph{D\'epartement de Physique Th\'eorique and Center for Astroparticle Physics, Universit\'e de Gen\`eve, Switzerland}\\
+\emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
 \noindent\href{mailto:emanuele.re@physics.ox.ac.uk}{Emanuele Re} 
 \emph{Rudolf Peierls Centre for Theoretical Physics, University of Oxford, United Kingdom}\\
 \noindent\href{mailto:antonio.riotto@unige.ch}{Antonio Riotto} 
 \emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
-\noindent\href{mailto:rizzo@slac.stanford.edu}{Tom Rizzo} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:rainer.roehrig@cern.ch}{Rainer Roehrig} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Max-Planck-Institut für Physik, Germany}\\
 \noindent\href{mailto:David.Salek@cern.ch}{David Salek} 
 \emph{Nikhef and GRAPPA, The Netherlands}\\
-\noindent\href{mailto:s.sarkar1@physics.ox.ac.uk}{Subir Sarkar} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Alexander.Schmidt@cern.ch}{Alexander Schmidt} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Steven.Schramm@cern.ch}{Steven Randolph Schramm} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Université de Genève, Switzerland}\\
 \noindent\href{mailto:will.shepherd@gmail.com}{William Shepherd} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:andrea.desimone@sissa.it}{Andrea de Simone} 
+\emph{University of California Santa Cruz Department of Physics and Santa Cruz Institute for Particle Physics, USA, and Niels Bohr International Academy, University of Copenhagen, Denmark}\\
+\noindent\href{mailto:andrea.desimone@sissa.it}{Andrea De Simone} 
 \emph{SISSA and INFN, Sezione di Trieste, Italy}\\
 \noindent\href{mailto:gurpreet.singh@cern.ch}{Gurpreet Singh} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Chulalongkorn University, Thailand}\\
 \noindent\href{mailto:Livia.Soffi@cern.ch}{Livia Soffi} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Cornell University, USA}\\
 \noindent\href{mailto:Norraphat.Srimanobhas@cern.ch}{Phat Srimanobhas} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:kevin.kai.hong.sung@cern.ch}{Kevin Sung} 
@@ -204,10 +194,8 @@
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Timothee.Theveneaux-Pelzer@cern.ch}{Timothee Theveneaux-Pelzer} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:mct1g11@soton.ac.uk}{Marc Thomas} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:nhan.viet.tran@cern.ch}{Nhan Viet Tran} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:M.C.Thomas@soton.ac.uk}{Marc Thomas} 
+\emph{Southampton University, United Kingdom}\\
 \noindent\href{mailto:Daniele.Trocino@cern.ch}{Daniele Trocino} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:sonaina.undleeb@ttu.edu}{Sonaina Undleeb} 
@@ -215,29 +203,27 @@
 \noindent\href{mailto:alessandro.vichi@cern.ch}{Alessandro Vichi} 
 \emph{Theory division, CERN, Switzerland }\\
 \noindent\href{mailto:Fuquan.Wang@cern.ch}{Fuquan Wang} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:liantaow@uchicago.edu}{LianTao Wang} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:renjie.wang@cern.ch}{Ren-Jie Wang} 
 \emph{Department of Physics, Northeastern University, USA}\\
-\noindent\href{mailto:daniel@uci.edu}{Daniel Whiteson} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:steven.worm@cern.ch}{Steve Worm} 
-\emph{Particle Physics Department, Rutherford Appleton Laboratory, United Kingdom}\\
 \noindent\href{mailto:mengqing.wu@cern.ch}{Mengqing Wu} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:sau.lan.wu@cern.ch}{Sau Lan Wu} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:Hongtao.Yang@cern.ch}{Hongtao Yang} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:Yong.Yang@cern.ch}{Yong Yang} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Shin-Shan.Yu@cern.ch}{Shin-Shan Yu} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{National Central University, Taiwan}\\
+\noindent\href{mailto:bryan.zaldivar@ulb.ac.be}{Bryan Zaldivar} 
+\emph{Universit\'e Libre de Bruxelles, Belgium}\\
 \noindent\href{mailto:marco.zanetti@cern.ch}{Marco Zanetti} 
 \emph{Universit\`a di Padova, Italy}\\
-\noindent\href{mailto:zhangzq@lal.in2p3.fr}{Zhiqing Philippe Zhang} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:zhangzq@lal.in2p3.fr}{Zhiqing Zhang} 
+\emph{Laboratoire de l'Acc\'el\'erateur Lin\'eaire, Univ. Paris-Sud 11 et IN2P3/CNRS, France}\\
 \noindent\href{mailto:a.zucchetta@cern.ch}{Alberto Zucchetta} 
 \emph{Universit\`a di Padova, Italy}\\
 \noindent\href{mailto:kzurek@berkeley.edu}{Kathryn Zurek} 
