--- a/doc/tex/Conclusions.tex
+++ b/doc/tex/Conclusions.tex
@@ -22,11 +22,39 @@
 %\item The Appendix contains a presentation of some models that came out in our discussions that were not deemed a priority for early Run2 analyses.  However, these should be considered in the future.
 %\end{itemize}
 
-The conclusions will contain a summary of the recommendation from the ATLAS/CMS DM Forum report, 
-together with the summary table below. 
+The ATLAS/CMS Dark Matter Forum has concluded its works in June 2015. Its mandate, 
+limited in scope and time, was focused on the proposal of a prioritized, compact set of benchmarks
+to be used for the design of the early Run-2 searches. 
+This report document the studies by Forum contributors from experiments and theory that allowed
+to identify a set of kinematically distinct models and model points. 
+The state of the art calculations and tools that are available to the LHC collaborations 
+at the start of Run-2 are detailed in this document. A summary of these studies can be found in 
+Table 6.1. 
 
-\input{tex/SummaryTable.tex}
+\input{tex/SummaryTable.tex}. 
 
-They will also include a series of points to be developed further beyond the timescale of the Forum. These points will be 
-discussed at the meeting that marks the conclusion of the works of the Forum, to be held during the week of June 10th. 
+This document primarily presents studies related to simplified models. 
+The presentation of results for EFT benchmark models is also discussed. 
+The studies contained in this report are meant to highlight the use of
+EFTs as a benchmark that is complementary to simplified models, 
+and to demonstrate how that collider results could be presented a function of the 
+fraction of events that are valid within the contact interaction approximation.  
+
+A number of points remain to be developed beyond the scope of this Forum, 
+in order to fully benefit from LHC searches in the global quest for Dark Matter.
+First and foremost, many implicit assumptions have not been fully explored in this work. 
+As a consequence, the list of models employed for early LHC Run-2 searches is not meant to be 
+complete or exhaustive, nor cover the entire range of possibility even for the limited scope of the 
+putative collider-stable dark matter candidate considered. 
+The limitations of the list of benchmarks considered should encourage the theoretical community to continue developing
+models and calculations, and guide the experimental community to test and use those new ideas in future searches. 
+Furthermore, we see the need for broader discussion on the comparison 
+of experimental results from different energy frontiers. The role of constraints on the mediator particles 
+from direct past and present collider searches should be developed further. 
+The uncertainties in these comparisons should be discussed and conveyed, so that the different results 
+can be placed in the correct context to enhance their complementarity.
+Work beyond this Forum will be needed to provide guidance on the identification of a possible signal, 
+if hints are found either during the early LHC Run-2 or by direct and indirect detection experiments. Conversely,
+if nothing is found, novel collider search strategies that explore new corners will be required. 
+\Todo{These points will be discussed at the meeting that marks the conclusion of the works of the Forum, to be held during the week of June 10th.} 
 
