--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -73,7 +73,7 @@ results are presented.
 
 \section{The ATLAS/CMS Dark Matter Forum}
 
-To understand what signal models should be used for the upcoming LHC Run 2, groups of experimenters from 
+To understand what signal models should be considered for the upcoming LHC Run 2, groups of experimenters from 
 both ATLAS and CMS collaborations have held separate discussions with small groups of
 theorists~\cite{Malik:2014ggr,Yavin:14092893}. 
 Another joint discussion was held at the DM@LHC workshop in Oxford, in 
