Update for case insensitive sorting, and hard coded corrections for Spanish names (ideally we'd just have first and last name in separate fields...).
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@357 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -2,8 +2,12 @@
 \emph{Texas Tech University, USA}\\
 \noindent\href{mailto:juan.alcaraz@cern.ch}{Juan Alcaraz} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:barbara.alvarez.gonzalez@cern.ch}{Barbara Alvarez Gonzalez} 
+\emph{CERN, Switzerland}\\
 \noindent\href{mailto:Jeremy.Andrea@cern.ch}{Jeremy Andrea} 
 \emph{Institut Pluridisciplinaire Hubert Curien/D\'epartement Recherches Subatomiques, Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
+\noindent\href{mailto:georges.azuelos@cern.ch}{Georges Azuelos} 
+\emph{University of Montreal and TRIUMF, Canada}\\
 \noindent\href{mailto:Patrizia.Azzi@cern.ch}{Patrizia Azzi} 
 \emph{INFN Padova, Italy}\\
 \noindent\href{mailto:mbackovic@gmail.com}{Mihailo Backovic} 
@@ -34,18 +38,26 @@
 \emph{Ohio State University, USA}\\
 \noindent\href{mailto:Mingshui.Chen@cern.ch}{Mingshui Chen} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
-\noindent\href{mailto:annapaola.de.cosa@cern.ch}{Annapaola De Cosa} 
-\emph{University of Zurich, Switzerland}\\
+\noindent\href{mailto:arely.cortes.gonzalez@cern.ch}{Arely Cortes Gonzalez} 
+\emph{IFAE Barcelona, Spain}\\
 \noindent\href{mailto:christopher.cowden@cern.ch}{Chris Cowden} 
 \emph{Texas Tech University, USA}\\
 \noindent\href{mailto:fraderamo@berkeley.edu}{Francesco D'Eramo} 
 \emph{University of California and LBNL, Berkeley, USA}\\
+\noindent\href{mailto:annapaola.de.cosa@cern.ch}{Annapaola De Cosa} 
+\emph{University of Zurich, Switzerland}\\
+\noindent\href{mailto:michele.degruttola@cern.ch}{Michele De Gruttola} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:andrea.desimone@sissa.it}{Andrea De Simone} 
+\emph{SISSA and INFN, Sezione di Trieste, Italy}\\
 \noindent\href{mailto:deandrea@ipnl.in2p3.fr}{Aldo Deandrea} 
 \emph{Universit\'e de Lyon and Universit\'e Lyon 1, CNRS/IN2P3, UMR5822, IPNL, France}\\
 \noindent\href{mailto:adifranz@uci.edu}{Anthony DiFranzo} 
 \emph{Department of Physics and Astronomy, University of California, Irvine and Theoretical Physics Department, Fermilab, USA}\\
 \noindent\href{mailto:caterina.doglioni@cern.ch}{Caterina Doglioni} 
 \emph{Lund University, Sweden}\\
+\noindent\href{mailto:tdupree.cms@gmail.com}{Tristan du Pree} 
+\emph{CERN, Switzerland}\\
 \noindent\href{mailto:Johannes.Erdmann@cern.ch}{Johannes Erdmann} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:cfischer@ifae.es}{Cora Fischer} 
@@ -58,14 +70,8 @@
 \emph{LPSC, Université Grenoble-Alpes, CNRS/IN2P3, France}\\
 \noindent\href{mailto:Bhawna.Gomber@cern.ch}{Bhawna Gomber} 
 \emph{University of Wisconsin-Madison, USA}\\
-\noindent\href{mailto:arely.cortes.gonzalez@cern.ch}{Arely Cortes Gonzales} 
-\emph{IFAE Barcelona, Spain}\\
-\noindent\href{mailto:barbara.alvarez.gonzalez@cern.ch}{Barbara Alvarez Gonzalez} 
-\emph{CERN, Switzerland}\\
 \noindent\href{mailto:johanna.gramling@cern.ch}{Johanna Gramling} 
 \emph{Universit\'e de Gen\`eve, Ecole de Physique, Switzerland}\\
-\noindent\href{mailto:michele.degruttola@cern.ch}{Michele De Gruttola} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:gunion@physics.ucdavis.edu}{John Gunion} 
 \emph{University of California, Davis, USA}\\
 \noindent\href{mailto:kristian.hahn@cern.ch}{Kristian Hahn} 
@@ -122,6 +128,8 @@
 \emph{Imperial College London, United Kingdom}\\
 \noindent\href{mailto:Fabio.Maltoni@cern.ch}{Fabio Maltoni} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:mmp@ifae.es}{Mario Martinez Perez} 
+\emph{IFAE Barcelona, Spain}\\
 \noindent\href{mailto:o.p.c.mattelaer@durham.ac.uk}{Olivier Mattelaer} 
 \emph{IPPP Durham, United Kingdom}\\
 \noindent\href{mailto:kentarou.mawatari@vub.ac.be}{Kentarou Mawatari} 
@@ -152,14 +160,8 @@
 \emph{Universit\`a di Padova, Italy}\\
 \noindent\href{mailto:Bjoern.Penning@cern.ch}{Bj\"orn Penning} 
 \emph{Imperial College London, United Kingdom}\\
-\noindent\href{mailto:mmp@ifae.es}{Mario Martinez Perez} 
-\emph{IFAE Barcelona, Spain}\\
-\noindent\href{mailto:Arturo.Rodolfo.Sanchez.Pineda@cern.ch}{Arturos Sanchez Pineda} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Deborah.Pinna@cern.ch}{Deborah Pinna} 
 \emph{University of Zurich, Switzerland}\\
-\noindent\href{mailto:tdupree.cms@gmail.com}{Tristan du Pree} 
-\emph{CERN, Switzerland}\\
 \noindent\href{mailto:massimiliano.procura@univie.ac.at}{Massimiliano Procura} 
 \emph{Universit\"at Wien, Austria}\\
 \noindent\href{mailto:shamona.fawad.qazi@cern.ch}{Shamona F. Qazi} 
@@ -174,14 +176,14 @@
 \emph{Max-Planck-Institut für Physik, Germany}\\
 \noindent\href{mailto:David.Salek@cern.ch}{David Salek} 
 \emph{Nikhef and GRAPPA, The Netherlands}\\
+\noindent\href{mailto:Arturo.Rodolfo.Sanchez.Pineda@cern.ch}{Arturos Sanchez Pineda} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Alexander.Schmidt@cern.ch}{Alexander Schmidt} 
 \emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:Steven.Schramm@cern.ch}{Steven Randolph Schramm} 
 \emph{Université de Genève, Switzerland}\\
 \noindent\href{mailto:will.shepherd@gmail.com}{William Shepherd} 
 \emph{University of California Santa Cruz Department of Physics and Santa Cruz Institute for Particle Physics, USA, and Niels Bohr International Academy, University of Copenhagen, Denmark}\\
-\noindent\href{mailto:andrea.desimone@sissa.it}{Andrea De Simone} 
-\emph{SISSA and INFN, Sezione di Trieste, Italy}\\
 \noindent\href{mailto:gurpreet.singh@cern.ch}{Gurpreet Singh} 
 \emph{Chulalongkorn University, Thailand}\\
 \noindent\href{mailto:Livia.Soffi@cern.ch}{Livia Soffi} 
